fix(block-media-list): align cta button with other buttons if they exist

--- a/src/content-blocks/BlockMediaList/BlockMediaList.scss
+++ b/src/content-blocks/BlockMediaList/BlockMediaList.scss
@@ -35,6 +35,11 @@
 		}
 		.c-media-card-content {
 			margin-top: 0.8rem;
+
+			p,
+			h4 {
+				color: transparent !important;
+			}
 		}
 	}
 
